fixed TrackShow white space problems

--- a/frontend/src/components/Track/TrackShow.css
+++ b/frontend/src/components/Track/TrackShow.css
@@ -40,8 +40,10 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    padding-left: 3rem;
     padding-bottom: 80px;
     height: 100%;
+    min-height: 100vh;
 }
 
 .track-show-header {
